--- a/src/_includes/home/components/footer.liquid
+++ b/src/_includes/home/components/footer.liquid
@@ -1,7 +1,7 @@
-<footer class="p-4 mt-4 bg-s-t1a4 shadow-lg flex flex-col items-center _gap-16px ">
+<footer class="p-4 mt-4 bg-s-t1a4 shadow-lg -h5 flex flex-col items-center _gap-16px ">
 
     <div>
-        <span class="p-2 -h5 bg-s-t1a5">
+        <span class="p-2 bg-s-t1a5">
             &copy; <span class="js_footer"></span> No Copyright
         </span>
     </div>
@@ -18,6 +18,3 @@
 
 
 
-<!-- Javascript -->
-
-{% include './assets-liquid/js/footerJS.liquid' %}
