--- a/src/index.liquid
+++ b/src/index.liquid
@@ -2,31 +2,9 @@
 
 title: home
 
-layout: 'layout/base.liquid'
+layout: 'home/home.liquid'
 
 ---
 
 
-
-  <h3 class="m-[2rem] text-center">Recent Articles</h3>
-
-
- 
-  <div class="-card-layout-1-3-wrapper">
-
-    <div class="-card-layout-1-3">
-    
-        {% for post in collections.articles reversed limit:5 %}
-
-        
-            {% include './_includes/components/article/articles.liquid' %}    
-
-
-        {% endfor %}
-    
-    </div>
-    
-
-    
-
-</div>
+{% include 'home/components/content/content.liquid' %}
