--- a/src/_includes/home/components/navbar.liquid
+++ b/src/_includes/home/components/navbar.liquid
@@ -38,7 +38,7 @@ dark mode button - col-span-1
             {% include './home/assets-liquid/svg/bangladeshSVG.liquid' %} 
          
 
-            <a  href="/">Beauty of Bangladesh</a>
+            <a  href="/">Cities of Bangladesh</a>
             
         </div>
     
