--- a/src/_includes/article/article.liquid
+++ b/src/_includes/article/article.liquid
@@ -37,6 +37,25 @@ layout: 'home/home.liquid'
 
     <p>{{content | safe}}</p>
 
+
+
+    <div class="_mt-32px _p-8px bg-s-t1a3 text-l1-a2 shadow ">
+
+  
+        <span class="_mr-8px">
+
+            {% include './article/assets-liquid/Svg/informationSVG.liquid' %}
+
+        </span>
+
+        
+
+
+        {{ note }}
+
+    </div>
+
+   
    
         
 
