--- a/src/_includes/articles/components/articles.liquid
+++ b/src/_includes/articles/components/articles.liquid
@@ -1,7 +1,7 @@
 <div class="-card-1-3 _pt-4px _pb-12px _px-8px space-y-4 bg-s-t1a3 shadow-lg -fade-in-right "> 
     
                 
-    <img class="-card-img-1-3" src="{{post.data.img}}  alt="{{post.data.imgAlt}}">
+    <img class="-card-img-1-3" src="{{post.data.img}}"  alt="{{post.data.imgAlt}}">
 
 
 
