--- a/src/_includes/home/components/content/content.liquid
+++ b/src/_includes/home/components/content/content.liquid
@@ -20,6 +20,16 @@
     </div>
     
 
-    
+</div>
+
+<div class="flex justify-center">
+
+<span class="_m-32px rounded  _p-12px text-center bg-s-t1a3  shadow group">
+
+    Check out all the 
+
+    <a class="text-b-t1l1a1 font-bold group-hover:underline" href="/articles/"  >articles</a>
+
+</span>
 
 </div>
