--- a/src/_includes/home/components/content/content.liquid
+++ b/src/_includes/home/components/content/content.liquid
@@ -24,11 +24,31 @@
 
 <div class="flex justify-center">
 
-<span class="_m-32px rounded  _p-12px text-center bg-s-t1a3  shadow group">
+<span class="_m-32px rounded  _p-12px text-center bg-s-t1a3  shadow ">
 
     Check out all the 
 
-    <a class="text-b-t1l1a1 font-bold group-hover:underline" href="/articles/"  >articles</a>
+    <a class="text-b-t1l1a1 font-bold " href="/articles/">
+
+
+   <span>articles</span>
+
+    <span>
+        <svg class="w-6 h-6 font-bold "
+
+        style="display:inline-block"
+        fill="none"
+        stroke="currentColor" viewBox="0 0 24 24"><path d="M12 3c-4.625 0-8.442 3.507-8.941 8.001H10v-3l5 4-5 4v-3H3.06C3.56 17.494 7.376 21 12 21c4.963 0 9-4.037 9-9s-4.037-9-9-9z"></path></svg>
+    </span>  
+        
+    
+        
+        
+        
+    
+    
+    
+    </a>
 
 </span>
 
