--- a/src/assets/tailwind/2_components/button/_button.css
+++ b/src/assets/tailwind/2_components/button/_button.css
@@ -1,5 +1,6 @@
 
-@import './basic.css';
-@import './color/_color.css';
+@import './base.css';
 @import './size.css';
+@import './color/_color.css';
+@import './ring.css';
 @import './scaling.css';
